Closed
Bug 1613804
Opened 6 years ago
Closed 6 years ago
InputConnection.finishComposingText should commit composition text
Categories
(GeckoView :: General, defect, P1)
Tracking
(firefox76 fixed)
RESOLVED
FIXED
mozilla76
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | fixed |
People
(Reporter: m_kato, Assigned: m_kato)
References
Details
(Whiteboard: [geckoview:m76])
Attachments
(1 file)
STEP
- Set GBoard as default keyboard with US
- Browse any site that has text box. ex. https://www.google.com
- Input "@"
RESULT
"@" is composing state
EXPECTED RESULT
"@" isn't composing state like Google Chrome.
Updated•6 years ago
|
Priority: -- → P1
Updated•6 years ago
|
Rank: 9
Priority: P1 → P2
| Assignee | ||
Comment 1•6 years ago
|
||
Gecko don't commit composition when software keyboard calls
InputConnection.finishComposingText. It is incompatible with Blink's behaviour.
BaseInputConnection.finishComposingText() implementation is the following.
- Begin batch edit.
- Remove all composition span flag.
- End batch edit.
So if no composition after batch edit is finished, we should commit it on Gecko
to synchronize composition state.
Updated•6 years ago
|
Whiteboard: [geckoview:m76]
Updated•6 years ago
|
Priority: P2 → P1
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/0232994602b7
InputConnection.finishComposingText should commit composition text. r=geckoview-reviewers,snorp
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in
before you can comment on or make changes to this bug.
Description
•