Bug 1613804 - InputConnection.finishComposingText should commit composition text. r=geckoview-reviewers,snorp

Gecko don't commit composition when software keyboard calls
InputConnection.finishComposingText. It is incompatible with Blink's behaviour.

BaseInputConnection.finishComposingText() implementation is the following.

1. Begin batch edit.
2. Remove all composition span flag.
3. End batch edit.

So if no composition after batch edit is finished, we should commit it on Gecko
to synchronize composition state.

Differential Revision: https://phabricator.services.mozilla.com/D66370